; ModuleID = '/home/carl/AnghaBench/memcached/extr_items.c_item_stats_sizes_remove.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_items.c_item_stats_sizes_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stats_sizes_hist = common dso_local global i32* null, align 8
@stats_sizes_cas_min = common dso_local global i64 0, align 8
@stats_sizes_buckets = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @item_stats_sizes_remove(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** @stats_sizes_hist, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %12, label %7

7:                                                ; preds = %1
  %8 = load i64, i64* @stats_sizes_cas_min, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i64 @ITEM_get_cas(i32* %9)
  %11 = icmp sgt i64 %8, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %7, %1
  br label %35

13:                                               ; preds = %7
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @ITEM_ntotal(i32* %14)
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = sdiv i32 %16, 32
  store i32 %17, i32* %4, align 4
  %18 = load i32, i32* %3, align 4
  %19 = srem i32 %18, 32
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %13
  %22 = load i32, i32* %4, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %4, align 4
  br label %24

24:                                               ; preds = %21, %13
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* @stats_sizes_buckets, align 4
  %27 = icmp slt i32 %25, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %24
  %29 = load i32*, i32** @stats_sizes_hist, align 8
  %30 = load i32, i32* %4, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %29, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = add nsw i32 %33, -1
  store i32 %34, i32* %32, align 4
  br label %35

35:                                               ; preds = %12, %28, %24
  ret void
}

declare dso_local i64 @ITEM_get_cas(i32*) #1

declare dso_local i32 @ITEM_ntotal(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
